added share/download qr code function

--- a/Feedbacksystem/templates/pages/admin.html
+++ b/Feedbacksystem/templates/pages/admin.html
@@ -128,7 +128,7 @@
             <div class="row">
               <div class="col-md-4 mb-2" id="chart-container">
                 <h5 style="font-weight: bold">Academic Year: {{evaluation_status.academic_year}}</h5>
-                <h5 style="font-weight: bold;">{{ evaluation_status.semester }} Semester</h5>
+                <h5 style="font-weight: bold;">{{ evaluation_status.semester }}</h5>
                 <h5>Student Evaluation for Teachers Status: {{evaluation_status.evaluation_status}}</h5>
                 <h6>Evaluation End Date: {{evaluation_status.evaluation_end_date}}</h6>
                 <h6>Evaluation Release Date: {{evaluation_status.evaluation_release_date}}</h6>
