--- a/Feedbacksystem/templates/pages/faculty_events.html
+++ b/Feedbacksystem/templates/pages/faculty_events.html
@@ -29,37 +29,47 @@
 
 <div class="row row-cols-1 row-cols-sm-2 row-cols-lg-4 g-3">
 
-{% for i in unevaluated_events %}
+{% for event in unevaluated_events %}
   
 <div class="card">
     <div class="card-body">
-    {% if i.event_picture %}
-    <img src="{{ i.event_picture.url }}"  class="card-img-top img-fluid"  alt="Event Thumbnail">
+    {% if event.event_picture %}
+    <img src="{{ event.event_picture.url }}"  class="card-img-top img-fluid"  alt="Event Thumbnail">
     {% else %}
     <img src="{% static 'images/cvsu_thumbnail.jpg' %}"  class="card-img-top img-fluid" alt="CvSU Thumbnail">
     {% endif %}
-      <h5 class="card-title">{{i.title}}</h5>
-      <h6 class="card-subtitle mb-2 text-body-secondary">{{i.date}}</h6>
+      <h5 class="card-title">{{event.title}}</h5>
+      <h6 class="card-subtitle mb-2 text-body-secondary">{{event.date}}</h6>
       <p class="card-text">{{i.description|slice:":70"}}...</p>
-      {% if i.evaluation_status %}<a href="{% url 'faculty_event_detail' i.pk %}" class="card-link btn custom-btn">Evaluate</a>{% endif %}
-      <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#eventModal{{ i.id }}">View Details</a>
+      {% if event.evaluation_status %}
+      {% if event.qr_code %}
+          {% if event.attended %}
+            <a href="{% url 'faculty_event_detail' event.pk %}" class="card-link btn custom-btn">Evaluate</a>
+          {% else %}
+            <p>Please note: To evaluate this event, you must scan the QR code available at the venue.</p>
+          {% endif %}
+        {% else %}
+        <a href="{% url 'faculty_event_detail' event.pk %}" class="card-link btn custom-btn">Evaluate</a>
+        {% endif %}  
+      {% endif %}
+      <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#eventModal{{ event.id }}">View Details</a>
     </div>
 </div>
 <!-- Modal -->
-<div class="modal fade" id="eventModal{{ i.id }}" tabindex="-1" aria-labelledby="eventModalLabel{{ i.id }}" aria-hidden="true">
+<div class="modal fade" id="eventModal{{ event.id }}" tabindex="-1" aria-labelledby="eventModalLabel{{ event.id }}" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="eventModalLabel{{ i.id }}">{{i.title}}</h1>
+          <h1 class="modal-title fs-5" id="eventModalLabel{{ event.id }}">{{event.title}}</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-            <p>Date: {{ i.date }}</p>
-            <p>Time: {{ i.time }}</p>
-            <p>Location: {{ i.location }}</p>
-            <p>Description: {{ i.description }}</p>
-            <p>Evaluation Status: {{ i.evaluation_identifier }}</p>
-            <p>Created by: {{ i.get_author_name }}</p>
+            <p>Date: {{event.date }}</p>
+            <p>Time: {{ event.time }}</p>
+            <p>Location: {{ event.location }}</p>
+            <p>Description: {{ event.description }}</p>
+            <p>Evaluation Status: {{ event.evaluation_identifier }}</p>
+            <p>Created by: {{ event.get_author_name }}</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>  
