--- a/Feedbacksystem/templates/pages/faculty_events_upcoming.html
+++ b/Feedbacksystem/templates/pages/faculty_events_upcoming.html
@@ -1,10 +1,10 @@
 {% extends "pages/facultydashboard.html" %}
 {% load static %}
-{% block title %}Events{% endblock %}
+{% block title %}Upcoming Events{% endblock %}
 
 {% block header %}
 
-    <h2>Latest Events</h2>
+    <h2>Upcoming Events</h2>
    
     <hr>
 {% endblock header %}
