--- a/Feedbacksystem/templates/pages/school_event_form.html
+++ b/Feedbacksystem/templates/pages/school_event_form.html
@@ -81,7 +81,7 @@
     </div>    
     {% endfor %}
     <br>
-    <button type="submit" class="btn btn-warning custom-btn">Submit</button>
+    <button type="submit" class="btn btn-warning custom-btn w-100">Submit</button>
     </form>
    </div>
     {% endif %}
