--- a/Feedbacksystem/templates/pages/edit_faculty_events.html
+++ b/Feedbacksystem/templates/pages/edit_faculty_events.html
@@ -65,7 +65,22 @@
                         {% endfor %}
                     </div>
                 </div>
-                <p>{{ form.evaluation_status.label_tag }} {{ form.evaluation_status }}</p>
+                
+                <div class="form-group">
+                    {{ form.evaluation_status.label_tag }}
+                    {{ form.evaluation_status }}
+                    </div>
+                <div id="start-date-div" class="form-group">
+                    {{ form.evaluation_start_datetime.label_tag }}
+                    {{ form.evaluation_start_datetime }}
+                </div>
+                
+                <div class="form-group">
+                    {{ form.evaluation_end_datetime.label_tag }}
+                    {{ form.evaluation_end_datetime }}
+                </div>
+
+                <p>{{ form.requires_attendance.label_tag }} {{ form.requires_attendance }}</p>
                 <button type="submit" class="btn custom-btn w-100">Save Changes</button>
         </div>
      
