--- a/Feedbacksystem/templates/pages/faculty_events_closed.html
+++ b/Feedbacksystem/templates/pages/faculty_events_closed.html
@@ -1,10 +1,10 @@
 {% extends "pages/facultydashboard.html" %}
 {% load static %}
-{% block title %}Events{% endblock %}
+{% block title %}Past Events{% endblock %}
 
 {% block header %}
 
-    <h2>Latest Events</h2>
+    <h2>Past Events</h2>
    
     <hr>
 {% endblock header %}
@@ -38,7 +38,7 @@
       <h5 class="card-title">{{i.title}}</h5>
       <h6 class="card-subtitle mb-2 text-body-secondary">{{i.date}}</h6>
       <p class="card-text">{{i.description|slice:":70"}}...</p>
-      {% if i.evaluation_status %}<a href="{% url 'event_detail' i.pk %}" class="card-link btn custom-btn">Evaluate</a>{% endif %}
+      {% if i.evaluation_status == 'Ongoing' %}<a href="{% url 'event_detail' i.pk %}" class="card-link btn custom-btn">Evaluate</a>{% endif %}
       <a href="#" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#eventModal{{ i.id }}">View Details</a>
     </div>
 </div>
