--- a/Feedbacksystem/templates/pages/faculty_events_evaluated.html
+++ b/Feedbacksystem/templates/pages/faculty_events_evaluated.html
@@ -1,10 +1,10 @@
 {% extends "pages/facultydashboard.html" %}
 {% load static %}
-{% block title %}Events{% endblock %}
+{% block title %}Evaluated Events{% endblock %}
 
 {% block header %}
 
-    <h2>Latest Events</h2>
+    <h2>Evaluated Events</h2>
    
     <hr>
 {% endblock header %}
